--- a/src/main/resources/templates/user-pages/list-users.html
+++ b/src/main/resources/templates/user-pages/list-users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>User List</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -16,17 +16,27 @@
             <th>#</th>
             <th>Name</th>
             <th>Email</th>
+            <th>Goal</th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="user, iterStat : ${users}">
-            <td th:text="${iterStat.index + 1}">1</td>
-            <td th:text="${user.name}">John Doe</td>
-            <td th:text="${user.email}">john.doe@example.com</td>
+            <td th:text="${iterStat.index + 1}"></td>
+            <td th:text="${user.name}"></td>
+            <td th:text="${user.email}"></td>
+            <td th:text="${user.goal != null ? user.goal.goalType : 'No goal assigned'}"></td>
             <td>
-                <a th:href="@{/users/edit/{id}(id=${user.id})}" class="btn btn-warning">Edit</a>
-                <a th:href="@{/users/delete/{id}(id=${user.id})}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?')">Delete</a>
+                <!-- Butoane Edit și Delete vizibile doar pentru utilizatorul logat -->
+                <a th:href="@{/users/edit/{id}(id=${user.id})}" class="btn btn-warning"
+                   th:if="${#authentication.name.equals(user.name)}">Edit</a>
+                <a th:href="@{/users/delete/{id}(id=${user.id})}" class="btn btn-danger"
+                   th:if="${#authentication.name.equals(user.name)}"
+                   onclick="return confirm('Are you sure you want to delete this user?')">Delete</a>
+
+                <!-- Buton "See Workouts" vizibil doar pentru utilizatorul logat -->
+                <a th:href="@{/users/{id}/workouts(id=${user.id})}" class="btn btn-info"
+                   th:if="${#authentication.name.equals(user.name)}">See Workouts</a>
             </td>
         </tr>
         </tbody>
