--- a/src/main/resources/templates/goals-pages/goal-form.html
+++ b/src/main/resources/templates/goals-pages/goal-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>Goal Form</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -9,15 +9,10 @@
     <h2 class="my-4" th:text="${goal.id != null ? 'Edit Goal' : 'Add New Goal'}"></h2>
 
     <form th:action="@{/goals/save}" th:object="${goal}" method="post">
+        <input type="hidden" th:field="*{id}"/>
         <div class="form-group">
             <label for="goalType">Goal Type</label>
-            <select th:field="*{goalType}" class="form-control" id="goalType" required>
-                <option value="" disabled selected>Select goal type</option>
-                <option value="Strength">Strength</option>
-                <option value="Weight Loss">Weight Loss</option>
-                <option value="Endurance">Endurance</option>
-                <option value="Flexibility">Flexibility</option>
-            </select>
+            <input type="text" th:field="*{goalType}" class="form-control" id="goalType" placeholder="e.g., Weight Loss" required>
         </div>
 
         <div class="form-group">
