--- a/src/main/resources/templates/user-pages/list-users.html
+++ b/src/main/resources/templates/user-pages/list-users.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <title>User List</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
@@ -27,14 +27,12 @@
             <td th:text="${user.email}"></td>
             <td th:text="${user.goal != null ? user.goal.goalType : 'No goal assigned'}"></td>
             <td>
-                <!-- Butoane Edit și Delete vizibile doar pentru utilizatorul logat -->
                 <a th:href="@{/users/edit/{id}(id=${user.id})}" class="btn btn-warning"
                    th:if="${#authentication.name.equals(user.name)}">Edit</a>
                 <a th:href="@{/users/delete/{id}(id=${user.id})}" class="btn btn-danger"
                    th:if="${#authentication.name.equals(user.name)}"
                    onclick="return confirm('Are you sure you want to delete this user?')">Delete</a>
 
-                <!-- Buton "See Workouts" vizibil doar pentru utilizatorul logat -->
                 <a th:href="@{/users/{id}/workouts(id=${user.id})}" class="btn btn-info"
                    th:if="${#authentication.name.equals(user.name)}">See Workouts</a>
             </td>
